Made a subfolder for DS

--- a/Distributed Systems/_posts/2020-02-11-DS-5.md
+++ b/Distributed Systems/_posts/2020-02-11-DS-5.md
@@ -6,21 +6,20 @@ categories:
 date: 2020-02-11
 ---
 
-## **5. Service Oriented Architecture**
+- [Architectures](#architectures)
+  - [One-tier Architectures](#one-tier-architectures)
+  - [Two-tier Architectures](#two-tier-architectures)
+  - [Three-tier Architectures](#three-tier-architectures)
+  - [N-tier Architectures](#n-tier-architectures)
+- [Service-Oriented Architectures](#service-oriented-architectures)
+- [SOA Vision](#soa-vision)
+- [Service Provision and Consumption](#service-provision-and-consumption)
+- [Summary](#summary)
 
-**Goal:** understand the meaning of service-oriented architecture
 
-**Recap: Conceptual design of software systems**
 
-  - So far the model we adopted was to say that there's DS and we want
-    them o interact, that supports PAD model.
-      - Presentation layer - interface
-      - application logic – business logic
-      - Resource management – data layer
-  - These three layers will map nicely to the interface that the user
-    need in the system– interface, processing and data layers
-
-**One-tier Architectures**
+## Architectures
+### One-tier Architectures
 
   - We take all 3 layers and build that into ONE system that combines
     all thee software system layers (=legacy systems)
@@ -34,7 +33,7 @@ date: 2020-02-11
     (CPU, system) – monolithic, and it doesn’t provide entry point when
     interacting except through dumb terminal
 
-**Two-tier Architectures**
+### Two-tier Architectures
 
   - Take 3 layers, and one has to go out – separate presentation layer
   - Simply says with the advance of the PC, you can think about you
@@ -42,7 +41,7 @@ date: 2020-02-11
       - Server does app and resource management
       - U move presentation from server to client
 
-**Three-tier Architectures**
+### Three-tier Architectures
 
   - Why can't you just map 3 system into 3 diff system?
   - application logic layer – sits on a middle tier that interacts
@@ -53,7 +52,7 @@ date: 2020-02-11
   - Key concept is the concept of middleware – that makes it look like a
     <span class="underline">one coherent system</span>
 
-**N-tier Architectures**
+### N-tier Architectures
 
   - If we apeopley 3 tier model to full generality, we expect many
     servers at the app logic, many servers in resource management
@@ -125,7 +124,7 @@ date: 2020-02-11
 
   - As a **SERIVCE**
 
-**Service-Oriented Architectures**
+## Service-Oriented Architectures
 
   - Is an architectural style
   - What app that uses SOA do deliver, is a functionality through
@@ -149,21 +148,9 @@ date: 2020-02-11
         interface
       - What we need is the <span class="underline">description of the
         interface</span> so that we can use it and reply back
-Remember remote procedural call
-  - Slide with 10 steps: Marshal – serialise – gets to the other end –
-    unmarshal
 
-<!-- end list -->
 
-  - If we put this into object technology – we have
-    <span class="underline">RMI</span>
-      - Client will have a copy of interface- marshall invocation-
-        unmarshall- invoke method- send the result back
-  - One talks procedure, other talks
-    <span class="underline">object</span>
-
-**SOA Vision -** How’s it gonna work w services? -through SOA vision
-
+## SOA Vision
   - **Resources**- All the resources on the web that is available can be
     accessed
 
@@ -184,6 +171,7 @@ Remember remote procedural call
     <span class="underline">operational procedures</span> where services
     can be invoked and can be used by the entire world
 
+
 **Power Grid Inspiration for Computing**
 
   - This comes from the real world, we got the inspiration from power
@@ -193,6 +181,7 @@ Remember remote procedural call
       - If we plug it to a socket we don’t know where the electricity
         comes from - wind turbine? Nuclear plant?
   - Anyways the fact that its transparent is similar
+
 
 **What is a ‘Service’?**
 
@@ -236,8 +225,7 @@ Remember remote procedural call
 
 
 
-**Service Provision and Consumption**
-
+## Service Provision and Consumption
   - ![2](https://user-images.githubusercontent.com/33334078/74691381-8556cc80-51da-11ea-8ee9-d4b066cd1301.png)
   - Service consumer is LHS, and service RHs
       - **Policy** - Service itself before it gets published, needs to
@@ -252,8 +240,8 @@ Remember remote procedural call
         msg passing, and consumer sends messages, service is invoked and
         result of invocation is sent back to the consumer as a message.
 
-**Service-Oriented Architectures III -** Decentralised middleware
 
+**Service-Oriented Architectures III -** Decentralised middleware
   - To implement this, we need a **middleware** – client is talking to
     server transparently
   - There's no obvious place to place middleware in 3 or n tier.
@@ -265,7 +253,6 @@ Remember remote procedural call
   - → middleware is decentralised, its not in one place
 
 **Service-Oriented Architectures IV -** Emphasis on loose coupling
-
   - In SOA it’s loosely coupled – interdependency btwn the services are
     NOT there
   - Due to the no dependency, you can easily add, replace, change
@@ -281,7 +268,6 @@ Remember remote procedural call
 
 **Service-Oriented Architectures V –** adherence to well-supported
 standards
-
   - Standards
   - With SOA, we ain’t gonna reinvent all sorts of things
       - We will look at traditional system – the way we integrated them
@@ -294,8 +280,7 @@ standards
   - → no need to reinvent the wheel but still there are organisations
     that are contributing to having a standard
 
-**Summary**
-
+## Summary
   - History, 1,2,3, N-tier to SOA architecture with service provider,
     finding and interacting, Emphasis on middleware, loosely coupled and
     adherence to standards.
