--- a/Distributed Systems/_posts/2020-02-13-DS-6.md
+++ b/Distributed Systems/_posts/2020-02-13-DS-6.md
@@ -6,8 +6,16 @@ categories:
 date: 2020-02-13
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Service Oriented Architecture](#service-oriented-architecture)
+  - [What are Web Services?](#what-are-web-services)
+  - [What are Web Services Protocols?](#what-are-web-services-protocols)
+  - [The Big picture](#the-big-picture)
+  - [SOAP: Simple Object Access Protocol](#soap-simple-object-access-protocol)
+  - [WSDL: Web Services Description Language](#wsdl-web-services-description-language)
+  - [Summary](#summary)
+<!-- TOC END -->
 
-## **6. Web Services**
 
 **Goal** – to understand principles behind web services and their use  
   - Service is usually managed by a service provider; think of it as
@@ -42,49 +50,9 @@ date: 2020-02-13
           - SOAP, WSDL, UDDI
           - REST
 
-**Why do we need Web Services?**
 
-  - Well traditionally screen scraping a website, meaning you go to a
-    website to extract data, and you try to use it in a way as a part of
-    some functionality, or modern application.
-  - We treat the website as a database
-      - Is inherently unreliable, but as a programmer, we need to query
-        the resource programmatically
-      - Always to think of an API
-  - Industry has its own requirements and it needs to be fulfilled by DS
-    technologies
-  - And its moved from adoption of data encoding formats for describing
-    and exchanging data
-      - Little and big endian, how do you marshal and unmarshal
-        transparently, and if you have a specific data encoding format
-        such as XML, JSON → no longer ur problem\!
-          - Linux can talk to windows, doesn’t matter language,
-            platform, etc
-  - DS using this format has been attractive
-
-**What are web services?**
-
-  - **Web service** is a piece of business logic, located on the
-    internet and can be accessed using standard XML or **standard
-    protocols** such as HTTP or STMP
-      - Only thing that is diff is that ur accessing an application –
-        may think about procedures, methods or objects
-  - Doesn’t necessarily replace existing DS, but is a coarse grain to
-    exposing and advertising enterprise services
-  - Fundamental idea of SOA is that as a service provider, you publish
-    and expose ur service.
-      - Can be published on platforms – google, amazon etc
-  - But what's more important is the way you access them – standard way.
-  - If ur able to access, then you have opportunity to build large
-    scale, loosely coupled DS without any constraining technology. If
-    google amazon can expose these technologies, interoperability isn’t
-    a problem anymore
-      - Loosely coupled - There’s no real dependency between the
-        programs
-      - U will simply invoke the services to develop system components
 
 **Why use XML for structuring and exchanging data?**
-
   - Easily extended, Data is self-described
   - Text based -easy to parse, portable and human friendly
   - And it doesn’t belong to anybody\! – non-proprietary
@@ -93,7 +61,6 @@ date: 2020-02-13
 
 
 **Why use JSON for structuring and exchanging data?**
-
   - Lightweight, text data interchange format
   - Language independent and human friendly
   - Self-describing and easy to understand
@@ -102,8 +69,8 @@ date: 2020-02-13
   - When you invoke a web service, you usually have the choice to tell
     the service provider to send back the reply in json or xml
 
-**Service Oriented Architecture**
 
+## Service Oriented Architecture
   - Web services are there to support the development of SOA
   - Self-contained, self-describing modular unit participating in a
     larger ecosystem
@@ -134,15 +101,23 @@ date: 2020-02-13
     But its likely that they have partnership, therefore it’s important
     to provide interface to the company on the RHS
 
-**What are Web Services?**
 
-  - Is platform and implementation independent software components that
-    can be:
-      - If I decide to implement my own WS in Linux in java, when I
-        deploy it so that people can use it, the users won't know the
-        details of the implementation and the platform that supports
-        this service
-      - Client of the WS can't tell how service is implemented
+## What are Web Services?
+  - **Web service** is a piece of business logic, located on the
+    internet and can be accessed using standard XML or **standard
+    protocols** such as HTTP or STMP
+  - Doesn’t necessarily replace existing DS, but is a coarse grain to
+    exposing and advertising enterprise services
+  - Fundamental idea of SOA is that as a service provider, you publish
+    and expose your service.
+      - Can be published on platforms – google, amazon etc
+  - If you are able to access the web services, then you have opportunity to build large
+    scale, loosely coupled DS without any constraining technology. If
+    google amazon can expose these technologies, interoperability isn’t
+    a problem anymore
+      - Loosely coupled - There’s no real dependency between the
+        programs
+      - You will simply invoke the services to develop system components
 
 <!-- end list -->
 
@@ -152,7 +127,7 @@ date: 2020-02-13
         algorithms that are used
           - E.g. if I’m a service provider and I have a method ‘do it’ =
             this method has a name, and it needs two arguments\!
-            arguments are item name and quantity → Ur describing the
+            arguments are item name and quantity → your describing the
             service. The end user looks at this description and stick to
             it – its part of the contract/ policy.
           - Important for The SERVER to tell me what transport its
@@ -179,7 +154,7 @@ date: 2020-02-13
 
 
 5.  Composed with other services.
-      - To compose ur service with other services and have a
+      - To compose your service with other services and have a
         <span class="underline">chain</span> of web services.
       - Here I invoke service 1, get some output – this can become an
         input to web service no 2. and this output can be fed to 3 and
@@ -187,10 +162,11 @@ date: 2020-02-13
       - What does this mean? Need to build an app that can integrate the
         WS – every time you invoke a service you feed input and extract
         some useful output
-      - E.g. When ur going to a football match – weather, city, how to
+      - E.g. When your going to a football match – weather, city, how to
         get → all these are composition of WS
 
-**What are Web Services Protocols?**
+
+## What are Web Services Protocols?
 
   - They’ve implemented this through number of protocols to make this
     service description, discovery and invocation
@@ -199,32 +175,26 @@ date: 2020-02-13
       - **UDDI** – as a broker to discover service
       - **SOAP** – achieve platform and implementation independent, and
         can compose a chain of WS
-  - U need protocols to make this vision happen
+  - You need protocols to make this vision happen
   - SOAP – simple object access protocol – over time it became service
     oriented architecture protocol
 
-**The Big picture**
+## The Big picture
+![1](https://user-images.githubusercontent.com/33334078/74752602-d7ddca80-5266-11ea-8c79-b27d4e099bef.png)
 
-  - ![1](https://user-images.githubusercontent.com/33334078/74752602-d7ddca80-5266-11ea-8c79-b27d4e099bef.png)
+1. You are here, you are a soap client and you are building an app that invokes an amazon service.  
 
-<!-- end list -->
-1)  Ur here, ur a soap client and ur building an app that invokes amazon
-    service.  
+2. Send a request to amazon server, it understands that your talking SOAP, and invokes SOAP processor, and soap processor understands the business logic, it gets the logic and execute it  
 
-2)  Send a rq to amazon server, it understands that ur talking SOAP, and
-    invokes SOAP processor, and soap processor understands the business
-    logic, it gets the logic and execute it  
-
-3)  Sends back a response
-<!-- end list -->
-  - Before doing this, client needs the description of the service –
-    gets it from UDDI registry or directly from service provider - is
-    described through WSDL
-  - EMPHAIZE the importance of having WSDL – which describes the interface
-    of services
+3. Sends back a response  
+    - Before doing this, client needs the description of the service –
+      gets it from UDDI registry or directly from service provider - is
+      described through WSDL
+    - EMPHAIZE the importance of having WSDL – which describes the interface
+      of services
 
 
-**SOAP: Simple Object Access Protocol**
+## SOAP: Simple Object Access Protocol
   - It ain't simple.
   - Sometimes name gets given to protocols without understanding what
     they do – it’s a mechanism to ensure that the client and server can
@@ -239,7 +209,7 @@ date: 2020-02-13
           - AGAIN, RPC style – still using remote procedure call, where
             client sends the rq, client invokes a method which is part
             of the service. request reply, invokes a method. very imp
-              - U can decide if you want it sync or async.
+              - You can decide if you want it sync or async.
       - It provides interoperability abstraction of conventional RPC/
         RMI
           - RPC – invoke remote procedure call
@@ -252,13 +222,13 @@ date: 2020-02-13
 
   - Client builds a soap msg → Sent through network through a soap
     server
-  - The soap is very much how you wrap ur msg – with a lot of XML → SOAP
+  - The soap is very much how you wrap your msg – with a lot of XML → SOAP
     body
   - Once you have a body (I want to invoke this, these are the params,
     this is the transport), ull have to put it in a SOAP envelope.
   - However, you may want to look at extra information that will help
-    how soap server process ur message – SOAP header is added to help
-    SOAP processor do sth with ur request
+    how soap server process your message – SOAP header is added to help
+    SOAP processor do sth with your request
   - However, it has to go through a network, and server and client have
     diff OS, diff platform and data encoding –have to look at naming and
     namespace declaration and you need to agree in encoding style and
@@ -300,11 +270,11 @@ date: 2020-02-13
     values – these values could specify as part of the body.
       - Could be one element, sometimes it’s a whole XML or json
         document
-  - End of the day ur invoking a method, name, parameters, and ur
+  - End of the day your invoking a method, name, parameters, and ur
     receiving back a response with some form of convention with the
     server
 
-**WSDL: Web Services Description Language**
+## WSDL: Web Services Description Language
 
   - Information required by the client to build SOAP msg will need to be
     extracted from the service interface – therefore the client doesn’t
@@ -328,7 +298,7 @@ date: 2020-02-13
           - A: service comes first – amazon writes the service, then
             they have a tool to generate a wsdl document
           - Then you use a diff tool to generate a stub or proxy to
-            attach to ur code – then you can invoke any of the method
+            attach to your code – then you can invoke any of the method
             that is available
 
 
@@ -337,7 +307,7 @@ date: 2020-02-13
   - Import / \#include - to import extra elements that are needed by the
     service
   - Types - There is a type that defines the datatype of msg elements
-  - Message – ur invoking methods, what are the names of the methods
+  - Message – your invoking methods, what are the names of the methods
   - Port type– where you pair the rq to the reply – when there's an
     element called doit – <span class="underline">portType</span> may
     look like doit rq and doit reply – processer will need to know that
@@ -350,7 +320,7 @@ date: 2020-02-13
     through URI
 
 
-**Summary**
+## Summary
   - By using XML and HTTP – WS meets industry needs that other DS tech
     cannot
   - WS support loose coupling – facilitating SOA for the internet
