--- a/Distributed Systems/_posts/2020-02-15-DS-7.md
+++ b/Distributed Systems/_posts/2020-02-15-DS-7.md
@@ -7,13 +7,15 @@ date: 2020-02-15
 ---
 
 
-## **7. Web Services- Java**
+- [Definition of Web Service](#definition-of-web-service)
+- [Available libraries](#available-libraries)
+- [Writing a client](#writing-a-client)
+- [Developing a server using JAX-WS](#developing-a-server-using-jax-ws)
+- [Summary](#summary)
 
 
-**Goal** – to understand principles behind web services programming in
-Java
 
-**Definition of Web Service**
+## Definition of Web Service
   - Comes from w3c group and has to do with standardisation and
     interoperability. It is a business logic and it provides some
     functionalities, but in order to use it you need an interface.
@@ -41,14 +43,14 @@ Java
 **What do we need?**
 
   - If I were to use it I need to think about 3 diff levels :
-      - Low-level – need to construct a SOAP message to send from client
+      - **Low-level** – need to construct a SOAP message to send from client
         to amazon server – <span class="underline">about parsing</span>,
         XML, JSON
-      - Mid-level – once I think about the core of the communication –
+      - **Mid-level** – once I think about the core of the communication –
         SOAP message needs to be assembled. e.g. this is the method I’d
         like to invoke in amazon server. How do I do that?
         (<span class="underline">construction of the message)</span>
-      - High-level– use SOAP concealed behind the interface – once I am
+      - **High-level** – use SOAP concealed behind the interface – once I am
         able to think about SOAP msg constructed, I need to send that to
         the server (<span class="underline">invocation of the
         service</span>)
@@ -56,8 +58,8 @@ Java
     container like Tomcat, given tendency for HTTP being the default for
     transport mechanism for SOAP. But it could be SMTP, etc
 
-**Available libraries**
 
+## Available libraries
   - JEE – web services are already integrated there
   - And number of major vendors like amazon, Microsoft, google and they
     provide their own comprehensive development kit
@@ -114,7 +116,7 @@ Java
         Anything that’s a class, can you make sure its in my jar file?
       - Am ready to write a client – need 3 lines of code.
 
-**Writing a client**
+## Writing a client
 
   - Get a WSDL document
   - I have used a tool such as WSimport to create directories and java
@@ -150,43 +152,30 @@ Extra e.g. A very few soap services available
 
 
 
-**Developing a server using JAX-WS**
+## Developing a server using JAX-WS
 
-  - Use JAX -WS to develop a server
+- Use JAX -WS to develop a server
+1. Create an WS-Service Endpoint **interface** and give it a name.
+  - Is called HelloWorld
+2. Then ur gonna **implement** the functionality
+  - It will return hello world JAX-WS and name
+  - Endpoint Interface – this is where you find the hello world
+3. Once I have the implementation, I need to **publish** the interface
+  - Publish it on this URL
+  - Endpoint.publish - that’s where my web service is up and
+    running.
+  - And you can check if the WSDL is published by accessing the URL
+- Two ways to develop. A client using JAX-WS:
+      1.  No tool – hard code it. I know where the WSDL is. Create URL and get
+          the document. Then you do qualified name where you pass the service
+          location. And you create the service and invoke it with getPort.
+      2.  With wsimport - it takes the WSDL and generate stubs, and use stubs
+          to invoke the service.
+          - → Easier to use stubs with the client
 
-<!-- end list -->
-
-1)  Create an WS-Service Endpoint **interface** and give it a name.
-      - Is called HelloWorld
-
-2)  Then ur gonna **implement** the functionality
-      - It will return hello world JAX-WS and name
-      - Endpoint Interface – this is where you find the hello world
-
-3)  Once I have the implementation, I need to **publish** the interface
-      - Publish it on this URL
-      - Endpoint.publish - that’s where my web service is up and
-        running.
-      - And you can check if the WSDL is published by accessing the URL
-
-<!-- end list -->
-
-  - Two ways to develop. A client using JAX-WS:
-
-<!-- end list -->
-
-1.  No tool – hard code it. I know where the WSDL is. Create URL and get
-    the document. Then you do qualified name where you pass the service
-    location. And you create the service and invoke it with getPort.
-2.  With wsimport - it takes the WSDL and generate stubs, and use stubs
-    to invoke the service.
-    1.  → Easier to use stubs with the client
-
-**Summary**
+## Summary
   - Noted that standard libraries and third-party libraries provide
     various levels of support for using Web Services in Java
   - Examined how high-level APIs hide the messy details of SOAP message
     handling – transparent to us
   - Seen how server and client can be implemented using JAX-WS.
-
-<!-- end list -->
