--- a/Distributed Systems/_posts/2020-02-17-DS-8.md
+++ b/Distributed Systems/_posts/2020-02-17-DS-8.md
@@ -6,14 +6,14 @@ categories:
 date: 2020-02-17
 ---
 
+- [What is REST?](#what-is-rest)
+- [The REST way of implementing the Web Services](#the-rest-way-of-implementing-the-web-services)
+- [Claimed Benefits](#claimed-benefits)
+- [REST vs SOAP differences](#rest-vs-soap-differences)
 
 
-## **8. Representational State Transfer (REST)**
 
-**Goals**: Understand principles behind REST and its use
-
-**What is REST? I**
-
+## What is REST?
   - REST is an architectural style for distributed hypermedia systems
   - REpresentational State Transfer
   - What's interesting is that this style came out in phd thesis – in
@@ -22,26 +22,16 @@ date: 2020-02-17
     principles and protocols are enough – you don’t need SOAP, deploying
     and all. Why can't we use WS in a more simplistic way?
 
-**What does it consist of? I**
 
-  - Simple architecture
-  - Resources – application state and functionality is divided into
+**What does it consist of?**
+  - **Resources** – application state and functionality is divided into
     resources and anything that I access through REST is a resource
-  - Universal syntax – every resource is uniquely accessible through
+  - **Universal syntax** – every resource is uniquely accessible through
     universal syntax and for use in hypermedia links
-  - Uniform interface – all resources share the same interface, so with
+  - **Uniform interface** – all resources share the same interface, so with
     one interface you can access all resources behind the actual service
     and for the transfer of state btwn a client and a resource.
-  - Q – Have we seen this architectural style before?
-      - A: yes - resource-based architectures
-      - CRUD, and access through URI
-
-**What does it consist of? II**
-
-  - U always need an interface, and this will feature constrained set of
-    well-defined operations and a constrained set of content types - all
-    the operations that I can have is restrained – so have to be careful
-    of how to invoke or access resources.
+  - You always need an **interface**, and this will feature **constrained set of well-defined operations** and a **constrained set of content types**
   - Protocol that is
       - client/server – send request, then reply back
       - stateless – server is stateless – server forgets who is invoking
@@ -51,43 +41,6 @@ date: 2020-02-17
   - end of the day, we have access to number of resources that is
     clearly constrained
 
-**In practice I**
-
-  - ![image](https://user-images.githubusercontent.com/33334078/74753149-9bf73500-5267-11ea-8095-3f476be9e97c.png)
-  - Client uses REST API through URL – where they access resource –
-    could be functionality, jpeg, etc
-  - Resource is accessed through universal syntax – URI
-  - If we look at how URI is assigned to individual resources – as data
-    records, etc and how they are transferred btwn client and server
-  - e.g -
-    https://api.flickr.com/services/rest/?method=flickr.photos.getinfo\&photoID=1234
-      - it looks like its using https, and it's going to flicker.com
-        where the api is there, and rest service, exposes a method and
-        any other parameters like photo id
-      - is more complicated when it comes to resources and how the
-        transfer of the state occurs.
-
-**In practice II**
-
-  - Relies heavily on well defined operations are simply HTTP verbs –
-    GET, POST, PUT and DELETE
-  - Once you invoke the web service, ur talking to a server, and server
-    side state will change – you access, but you also manipulate the
-    state of the server.
-  - The way you do it is through CRUD – get put post delete
-
-
-**The REST triangle**
-
-  - Rest is defined through:
-      - Content type – constrained, i.e. HTML code
-      - Verb – constrained, i.e. CRUD like GET, POST
-      - Nouns – unconstrained - you make use of the URI – some form of
-        service we want to use – i.e.
-        [www.google.com](http://www.google.com)
-  - It is not a standard, its rather an architectural style and we don’t
-    need to reinvent the wheels – what we already know is part of the
-    package
 
 **Why is it called “Representation State Transfer”?**
 
@@ -96,16 +49,16 @@ date: 2020-02-17
     where it's to do with the aircraft. Then client needs to get info
     coz they gotta do maintenance work of the aircraft.
       - Web resource is a URL – server returns a representation of the
-        resource. Here’s a rep of what ur asking for – i.e. html doc
+        resource. Here’s a rep of what your asking for – i.e. html doc
       - The representation will put the client into diff state as they
         are having access to 787.html
       - It will traverse the link and will find other resource – then ur
         exposed to new representation hence a change of state
   - State keeps changing, and it transfers from one to another
 
-**The REST way of implementing the Web Services I**
 
-![image](https://user-images.githubusercontent.com/33334078/74753188-a9142400-5267-11ea-998b-dbde0f772fe8.png)  
+## The REST way of implementing the Web Services
+- ![image](https://user-images.githubusercontent.com/33334078/74753188-a9142400-5267-11ea-998b-dbde0f772fe8.png)  
 1.  Get part list – use URL 1, look at the server, change the state, and
     client gets HTTP response through that invocation
 2.  Get detailed information about a particular part – client gets a
@@ -156,40 +109,28 @@ date: 2020-02-17
   - Once client submits PO through HTTP post – server will take that
     into consideration
 
-**Reiteration**
 
-  - Restful features:
-      - Client/ server interaction style
-      - Stateless requests – server has no memory of what was invoked
-      - Cache – can be cached which is interesting in terms of
-        performance
-      - Uniform interface – didn’t have to reinvent the wheel – POST,
-        GET can be reused
-      - Named resources – through URIs, which are logical URIs.
-      - Interconnected resource representations – you invoke a resource,
-        you get a representation and you get a state change.
-
-**Claimed Benefits I**
-  - Provides improved response times – caching comes as a plus
-  - Improves server scalability – bc servers are stateless, it doesn’t
+## Claimed Benefits
+  - **Provides improved response times** – caching comes as a plus
+  - **Improves server scalability** – bc servers are stateless, it doesn’t
     need to handle subsequent request or no need to remember what
     happened before
-  - Depends less on vendor software – don’t need any software in terms
+  - **Depends less on vendor software** – don’t need any software in terms
     of web and messaging framework – http should be enough →
     <span class="underline">main benefit\!</span>
-  - Provides equivalent functionality - compared to SOAP, can have same
+  - **Provides equivalent functionality** - compared to SOAP, can have same
     functionality
-  - Does not require a separate resource discovery mechanism – since
+  - **Does not require a separate resource discovery mechanism** – since
     everything is http and hyperlink. As long as you know what the API
     is needed to access the resource, should be enough
-  - Provides better long-term compatibility and evolvability – better
+  - **Provides better long-term compatibility and evolvability** – better
     than RPC (used for SOAP) – if you have more parts, and you change
     info regarding one part, the compatibility is maintained. Bc content
     types are defined without dropping or reducing the support of other
     content types.
 
-**Implementing the Web Services using SOAP**
 
+**Implementing the Web Services using SOAP**
   - Difference btwn service using SOAP and REST- compare \[9 pdf 10\]
     and \[9 pdf 19\]
   - URLs
@@ -211,16 +152,9 @@ date: 2020-02-17
             envelop, open it and interpret the msg and invoke the method
           - The overhead here is huge\!\!
 
-**REST/ SOAP I**
-
-  - SOAP and RESR are essentially the same in what they do, but diff in
-    how they work
-  - Both allow programs to exchange XML msgs
-  - Imp to reflect on the history → hence why we learn both
 
 
-
-**REST vs SOAP differences**
+## REST vs SOAP differences
 
 <table>
 <thead>
@@ -284,6 +218,7 @@ How to bring some semantic on any resource that we access on web
   - <span class="underline">Ontologies</span> – if we create ontology,
     we have reason about the data once it is represented through this
     framwwork
+
 
 **Conclusions**
 
