--- a/Distributed Systems/_posts/2020-02-19-DS-9.md
+++ b/Distributed Systems/_posts/2020-02-19-DS-9.md
@@ -6,31 +6,14 @@ categories:
 date: 2020-02-19
 ---
 
-## **9. Programming RESTful Web Services in Java**
+- [The Rest way of implementing the Web Service](#the-rest-way-of-implementing-the-web-service)
+- [The SOAP way of implementing the Web Service](#the-soap-way-of-implementing-the-web-service)
+- [Data Encoding and RPC](#data-encoding-and-rpc)
+- [Steps](#steps)
 
-**Goal** – Understand principles behind REST Web services programming in
-Java
 
-**REST: Quick Recap**
 
-  - Rest is an architectural style which is based on Web standards and
-    the HTTP protocol
-  - In a REST based architecture
-      - Everything is a resource
-      - A resource is accessed via a common interface based on the HTTP
-        – URI
-      - The REST server provides access to the resources
-      - The REST client accesses and modify the REST resources
-  - Resource
-      - Should support the HTTP common operations
-      - Is identified by global IDs – URIs
-  - Ur state changes so you can access more resources
-  - REST allows that resources have diff representations, e.g. XML, JSON
-  - The rest client can ask for specific representation via HTTP
-    protocol
-  - Importance of data encoding
-
-**The Rest way of implementing the Web Service**
+## The Rest way of implementing the Web Service
 
   - ![image](https://user-images.githubusercontent.com/33334078/74753368-eed0ec80-5267-11ea-884f-82f3d86f9d86.png)
   - Putting order on a part, and ur interested in list – then URL1 which
@@ -40,7 +23,7 @@ Java
   - Important here is you r in charge of sending HTTP get or post.
   - All three are resources
 
-**The SOAP way of implementing the Web Service**
+## The SOAP way of implementing the Web Service
 
   - ![image](https://user-images.githubusercontent.com/33334078/74753390-fabcae80-5267-11ea-9ce6-a19d2a5c7434.png)
   - All the overhead here
@@ -57,14 +40,8 @@ Java
   - DELETE – removes the resources
   - POST - updates an existing resource of creates a new resource
 
-**RESTful Web Services – Examples**
 
-  - Google Fit REST API, Twitter REST API, myMemory Machine Translation
-    API, Public directories API
-  - Might need to pay for it
-
-**Data Encoding and RPC**
-
+## Data Encoding and RPC
   - ![image](https://user-images.githubusercontent.com/33334078/74753412-027c5300-5268-11ea-8349-7504338b0a3b.png)
   - With **SOAP**, it is based on RPC – remote procedural call.
       - You make call to a remote object with necessary parameters, SOAP
@@ -76,30 +53,23 @@ Java
     are still using a request reply protocol – to invoke a RESTful
     service.
   - They are still very close – RPC and REST
-
-**Example Client Code:**
-
-  - That accesses BBC news headline
-  - That’s ur client and you need to know the API and stick to he policy
-  - U look at how you connect, and know the method, and know the
-    character encoding.
   - E.g.
-      - Api key and attach it with REST API – newsAPI
-          - U invoke a method called top headlines and you attach an API
-            key
-      - Set a connection
-      - And id like to get a result as json
-      - U will send the request method, GET, and get the top headline
-        and connect to server itself
-      - We need to get response and we need to understand what's in in -
-        output it to however you want
-      - Close connection
-  - End of a day if I have a server
-      - Api key
-      - Opening connection
-      - Read what's in it and output it
-      - Now we need to look at json and extract what we want. – next
-        step is to use a parser
+      - Protobuf
+          - Way of serialising structured data
+          - Protobuf is in core of all internal RPC protocols in Google
+      - Thrift
+          - Software framework from Apache
+          - Popular for services that needs cross-language service
+            development - you develop sth in diff languages, and it
+            supports a cross language services development
+          - Comes with a code generation engine and allows ur software
+            to write in various languages
+      - Avro          - Data serialisation system
+      - GSON
+          - Google – Google, de/serialisation library just like JSON
+          - Converts Java objects into JSON and back.
+
+
 
 **Java and REST**
 
@@ -141,16 +111,7 @@ Java
   - @Consumes – it defines media type that is consumed by the method –
     which is usually a post.
 
-**Example: Simple Calculator**
-
-  - Restful needs to be exposed
-  - Once implemented, you publish it
-  - Then you need to write a client.
-      - Calcrest – displayname
-      - url pattern- calc
-      - path form rest class – add/ sub usually a method itself
-
-**Steps**
+## Steps
 
 1.  Create the Restful Web Service
     1.  Looks like I'm gonna set the path to the base URL
@@ -176,41 +137,7 @@ Java
     4.  Through XML or Text
 
 
-    **Testing the Service**
-     - How do I write my client to use this service
-     - With jersey, you can see whether ur service is up and running
-      through http://localhost:9999/calcrest/application.wadl
-
-
-**Data Encoding and RPC - More**
-  - ![image](https://user-images.githubusercontent.com/33334078/74753692-6737ad80-5268-11ea-9cf6-be5ba53f04c4.png)
-  - In the context of the cwk, some services support plain text, XML,
-    json but others can support other data encoding style.
-  - When you use these data encoding formats, you need to stick to their
-    rules.
-  - It's always to do with **data encoding and data serialisation. you**
-    serialise ur data when you invoke a service and deserialise when you
-    get sth back from the server → Importance of having a RPC style –
-    send and reply, serialise and deserialise,
-  - E.g.
-      - Protobuf
-          - Way of serialising structured data
-          - Protobuf is in core of all internal RPC protocols in Google
-      - Thrift
-          - Software framework from Apache
-          - Popular for services that needs cross-language service
-            development - you develop sth in diff languages, and it
-            supports a cross language services development
-          - Comes with a code generation engine and allows ur software
-            to write in various languages
-      - Avro          - Data serialisation system
-      - GSON
-          - Google – Google, de/serialisation library just like JSON
-          - Converts Java objects into JSON and back.
-
-**Conclusion**
-
-  - We looked at RESTful APIs and implementation of reference
-    architecture- jersey
-  - Insisted the importance of data encoding, especially when deploying your
-own server - json, xml etc
+  **Testing the Service**
+   - How do I write my client to use this service
+   - With jersey, you can see whether ur service is up and running
+    through http://localhost:9999/calcrest/application.wadl
