--- a/Distributed Systems/_posts/2020-02-23-DS-10.md
+++ b/Distributed Systems/_posts/2020-02-23-DS-10.md
@@ -6,11 +6,18 @@ categories:
 date: 2020-02-23
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Function of a naming system**](#function-of-a-naming-system)
+  - [Flat naming systems](#flat-naming-systems)
+    - [1. Broadcasting](#1-broadcasting)
+    - [2. Forwarding pointers](#2-forwarding-pointers)
+    - [3. Home-based approach](#3-home-based-approach)
+    - [4. Distributed Hash Tables](#4-distributed-hash-tables)
+    - [5. Hierarchical approaches](#5-hierarchical-approaches)
+  - [Summary](#summary)
+<!-- TOC END -->
 
-## **11. Naming I – Flat Naming**
 
-**Goals** – understand principles behind a naming in a distributed
-system
 
 **Basic definitions**
 
@@ -71,7 +78,7 @@ system
   - In general, don’t want to use an address as a regular name – coz it
     changes\! So we want location-independent name\!
 
-**Function of a naming system**
+## Function of a naming system**
   - Naming system manages set of bindings btwn names and attributes of
     entities in the system.
       - In simplest form is a table of (name, address) pairs
@@ -83,7 +90,7 @@ system
       - Listing of bound names
       - Can organize the namespace as I want
 
-**Flat naming systems**
+## Flat naming systems
 
   - Entities are referred to by an identifier - and principles have no
     meaning at all – it doesn’t tell you how to locate the access point
@@ -93,7 +100,7 @@ system
 
 <!-- end list -->
 
-1)  **Broadcasting**
+### 1. Broadcasting
   - It broadcasts the ID- a message containing the identifier of the
     entity is broadcast to each machine and each machine checks if
     they’ve got it, and send back a reply message with the address of
@@ -112,7 +119,7 @@ system
 
 <!-- end list -->
 
-2)  **Forwarding pointers**
+### 2. Forwarding pointers
 
 <!-- end list -->
   - When an entity moves from A to B, it leaves behind in A a pointer to
@@ -158,7 +165,7 @@ system
 
 <!-- end list -->
 
-3)  **Home-based approach**
+### 3. Home-based approach
   - It approaches through a home – the **home location** keeps track of    where the entities are.
       - Communication to that IP address is first directed to the **home
         agent.**
@@ -205,7 +212,7 @@ system
 
 <!-- end list -->
 
-4)  **Distributed Hash Tables**
+### 4. Distributed Hash Tables
 
   - The way we organise them is a logical ring – you have entities and they hold some information
       - We expect every node to be with a random m-bit identifier
@@ -237,7 +244,7 @@ system
 
 
 
-5)  **Hierarchical approaches**
+### 5. Hierarchical approaches
 
 <!-- end list -->
 
@@ -302,8 +309,7 @@ system
       - Understand that the right child has info but not the left – one
         way to replicate that information
 
-**Summary**
-
+## Summary
   - 5 different mechanism for flat name space
   - Name space naming service is v imp and the definition of
     attributes\!\!
