--- a/Distributed Systems/_posts/2020-02-27-DS-12.md
+++ b/Distributed Systems/_posts/2020-02-27-DS-12.md
@@ -6,15 +6,17 @@ categories:
 date: 2020-02-27
 ---
 
+- [Domain Name System (DNS)](#domain-name-system-dns)
+- [DNS Zone Data](#dns-zone-data)
+- [Attribute-base Naming: Directory Services](#attribute-base-naming-directory-services)
+- [LDAP: Lightweight Directory Access Protocol*](#ldap-lightweight-directory-access-protocol)
+- [Java Naming and Directory Interface (JNDI)](#java-naming-and-directory-interface-jndi)
+- [Discovery in Web Services: UDDI](#discovery-in-web-services-uddi)
+- [Summary](#summary)
 
 
-## **13. Naming III – Attribute based Naming**
 
-**Goal** – to understand principles behind a naming in a distributed
-system
-
-**Domain Name System (DNS)**
-
+## Domain Name System (DNS)
   - To access <http://aws.amazon.com> → amazon’s web service
 <!-- end list -->
 1.  First you ask how to get to aws.amazon.com – address
@@ -27,30 +29,20 @@ system
     future use
 5.  You get the website IP address of the website
 
+
 **DNS partitioning**
 
   - ![Screenshot 2020-02-25 at 9 10 47 pm](https://user-images.githubusercontent.com/33334078/75287980-4bf21280-5813-11ea-9200-fc4c95a6f53a.png)
   - DNS with global, administrative, and managerial level which is v
     imp\!\!\!
 
-**DNS Zone Data**
-
-  - How its structured – it’s a tree and could look up for names –
-    through some form of attributes
+## DNS Zone Data
+  - How its structured – it’s a tree and could look up for names through some form of attributes
   - Names and IP address of at least two name servers with authoritative
     data for the zone.
-      - \[Diagram\], we have the zones that map to 3 layers – for each
-        managerial zone you need at least 2 name servers
-      - Why 2? To be prone to failing
   - Names and IP addresses of name servers holding authoritative data
     for delegated sub-domains.
-      - Means that, \[Diagram\], in vu, I should be I should be
-        responsible for my own zone – in order to do that, I need to
-        provide info with regard to the name of the Ip address of the
-        server.
-      - Look at the Importance of authorities – higher you are, more
-        important
-  - Importance of caching and replication
+  - Importance of **caching and replication**
       - Data will keep changing – frequent on the leaf and less in root
       - Gotta ensure that when data is replicated, we have consistency
         when accessing the actual data
@@ -60,7 +52,7 @@ system
     client is told such data are non-authoritative.
       - So when it comes to updating the data, make sure you are talking
         to the server
-  - Concept of TTL – time to live – cached data can be used by client up
+  - Concept of **TTL – time to live** – cached data can be used by client up
     to a time, but they need to call or ask server with authority to
     check the consistency of the data
       - E.g – what would be a TTL?
@@ -83,34 +75,8 @@ system
 | HINFO    | Host          | Info on this host                        |
 | TXT      | Any kind      | Any info considered useful               |
 
-  - A node in DNS namespace will often represent several entities at the
-    same time.
-      - Vu.nl represents domain and a zone.
-  - SOA - start of authority – holds info such a s email address of the
-    system admin responsible for that zone, or name of the host where
-    the data on the zone can be fetched.
-  - A – address- represents particular host in the internet. Contains IP
-    address for that host.
-  - MX – mail exchange – like a symbolic link to a node representing a
-    mail server. E.g. zephyr.cs.vu.nl, this server will handle all mail
-    incoming in cs.vu.nl domain.
-  - SRV – name of the server for a specific service – service itself is
-    identified by means of a name along with the name of a protocol.
-    Hence client no longer needs to know the DNS of a specific service’s
-    host.
-      - With srv interesting one, you could have ftp server and a mail
-        server, and they run on a SAMe host\!\! And same IP address – to
-        handle diff request in a more consistent way
-  - NS – name server – contains the name of a server that implements the
-    zone represented by the node.
-  - CNAME – canonical name – its like an alias to a primary name of the
-    host.
-  - PTR – DNS maintains an inverse mapping of addresses to host names by
-    means of pointer records
-  - HINFO – host info – to store additional information on a host like
-    OS or machine type.
 
-**Attribute-base Naming: Directory Services**
+## Attribute-base Naming: Directory Services
 
   - Is also known as directory services, where the entities have a set
     of associated attributes that can be used for searching.
@@ -125,16 +91,9 @@ system
       - Lookup entities by means of their attributes.
       - Yellow pages – you look for a plumber service– it gives list of
         companies and numbers
-  - Q: Can operations be expensive?
-      - Iterative – expensive\!
-      - The data is held in the node have to be stored in a format, and
-        the format itself MAY lead to a lookup operation being expensive
-          - The description of the data that is held in those directory
-            services
-          - **RDF** – Resource Description Framework – standard way of
-            how resources are described.
 
-**LDAP: Lightweight Directory Access Protocol**
+
+## LDAP: Lightweight Directory Access Protocol*
 
   - Directory service and implemented on top of TCP and helps you access
     info all over the internet
@@ -189,7 +148,8 @@ system
   - We are using a **standard** - the directory service should be
     designed in a way that search like below works.
 
-**Java Naming and Directory Interface (JNDI)**
+
+## Java Naming and Directory Interface (JNDI)
 
   - There is some code and you need access the directory service – how?
   - JNDI is an API for directory service that allows clients to discover
@@ -236,7 +196,7 @@ system
     attribute names
       - NamingEnumeration results = ctx.search("o=leeds.ac.uk", "(&(sn=Smith)(mail=\*))", ctl);
 
-**Discovery in Web Services: UDDI**
+## Discovery in Web Services: UDDI
 
   - Another service – who help businesses find what web services are
     exposed, how can developers find WSDL they need etc → through UDDI\!
@@ -272,7 +232,7 @@ system
 4.  Call methods of BulkResponse object to check for success or failure
     and extract details of organisations and services you need.
 
-**Summary**
+## Summary
 
   - Naming services allow us to bind a name to the attributes of some
     entity in a DS, and resolve a name into those attributes.
