--- a/Distributed Systems/_posts/2020-02-29-DS-13.md
+++ b/Distributed Systems/_posts/2020-02-29-DS-13.md
@@ -7,15 +7,18 @@ date: 2020-02-29
 ---
 
 
+- [Time in Distributed System](#time-in-distributed-system)
+- [Synchronization model](#synchronization-model)
+- Synchronization algorithms
+  - [Cristian’s Algorithm](#cristians-algorithm)
+  - [Berkeley Algorithm](#berkeley-algorithm)
+  - [Election Algorithms](#election-algorithms)
+  - [Bully Algorithms](#bully-algorithms)
+- [Summary](#summary)
 
-## **14. Timing and Synchronization**
 
 
-**Goal** – to understand principles behind timing and synchronization in
-a DS
-
-**Time in a DS**
-
+## Time in Distributed System
   - We have DS and have 4 machines and it will give 4 diff time as they
     have their own global time → hence time is unambiguous in a
     centralised system.
@@ -23,40 +26,15 @@ a DS
     there's some form of agreement on global time
   - Q: is there any way of synchronizing all the clocks? YES\!
 
-**Example**
-
-  - ![Screenshot 2020-02-25 at 9 18 25 pm](https://user-images.githubusercontent.com/33334078/75288487-5cef5380-5814-11ea-87e8-ce9bc9889087.png)
-  - Suppose you ask machine 1. It gives T1. A bit later when you ask, it
-    will give T2. And its guaranteed that T1\< T2.
-  - Take the scenario where you write a C code on a machine, in a
-    computer which editor runs. This is the time according to a local
-    clock on machine which the editor runs.
-  - If I run compiler on a diff machine, problem here is that tools such
-    as make will always look at the timestamp of output.c before
-    compiling, to decide whether to compile or not.
-      - If the input.c has time 2151 and input.o has 2150, make knows
-        that input.c has changed hence it compliles.
-      - BUT if 2 machines have diff time, and compiler’s machine is
-        earlier, it would not compile even if the changes have been made
-        in the file, due to the clock.
-  - Fact that 2 machines aren’t synchronized bc event happens afterwards
-    → causes inconsistency\!\!
-  - With thousands of machines, to work together and share resource,
-    time is paramount, and they have to synchronize often
 
 **Internal Physical Clock**
-
-  - Machines these days have built in time hardware called a
-    <span class="underline">precisely machined quartz crystal.</span>
+  - Machines these days have built in time hardware called a **precisely machined quartz crystal.**
       - Internal clock on PC has a crystal and it oscillates. There's a
         tension due to oscillation, which oscillates at a well-defined
         frequency.
   - Each oscillation will decrement a counter by 1.
   - What happens when it gets 0? Can simply generate timer interrupt or
     clock tick and counter is reloaded from a holding register
-  - Battery powered CMOS RAM – complementary metal oxide semiconductor –
-    it runs on RAM will always store a number of ticks since a known
-    date, which allows the system to maintain the notion of time.
   - In older machine, there's a reference where this internal clock will
     always reference to, which is called epoch, first generated in
     1/1/1970.
@@ -65,26 +43,23 @@ a DS
     which we refer as clock skew
 
 **Time Standards**
-
-  - Before 1958, notion of time was always based on mean solar second.
   - Since the invention of atomic clock – 1 second is defined as the
     time for a ‘caesium 133’ atom to make 9 billion electronic
     transition
   - If we are able to define atomic and solar second – can we agree on
     it being mapped?
   - History – BIH – Bureau International Heure – if all the people
-    gathers and says tell how many ticks their atomic clock ticked and
-    take the average. → International Atomic Time (TAI)
+\    take the average. → **International Atomic Time (TAI)**
   - Why are we doing this?
       - Bc the mean solar time would need semantic – the concept of time
         is changing bc the atmospheric change, the amt of coal, hence
         the notion of time needs to be caught up
-  - Hence BIH introduce leap seconds whenever discrepancy between TAI
+  - Hence BIH introduce **leap seconds** whenever discrepancy between TAI
     and means solar time reaches 800ms. → we need to artificially
     introduce a second
 
-**The Worldwide standard for time: UTC**
 
+**The Worldwide standard for time: UTC**
   - There is discrepancy and mean solar and TAI do not agree. If this
     difference \>800ms, then we introduce a leap second.
       - 31<sup>st</sup> of December midnight – we introduce leap
@@ -109,8 +84,8 @@ a DS
     end up with 1 second in every 11.6 days – could be 1 sec behind or
     faster
 
-**Synchronization model**
 
+## Synchronization model
   - Assumptions: DS with n machines and own clock and timer, and it
     issues **H** interrupts per second.
   - Interrupt handler adds 1 to software clock, and keeping track the
@@ -154,7 +129,7 @@ a DS
 
 
 
-**Cristian’s Algorithm**
+## Cristian’s Algorithm
 
   - ![image](https://user-images.githubusercontent.com/33334078/75288576-8a3c0180-5814-11ea-8c53-93d89f91960b.png)
   - A client with process running and time server running the
@@ -180,7 +155,7 @@ a DS
   - (T1-T0-I)/2, where I is time that server needs to handle the
     interrupt
 
-**Berkeley Algorithm**
+## Berkeley Algorithm
 
   - ![image](https://user-images.githubusercontent.com/33334078/75288614-9fb12b80-5814-11ea-9fff-2c7aa6705c2a.png)
   - Easy to implement coz there is no UTC server
@@ -198,7 +173,8 @@ a DS
   - Problem is, it won't scale. Too much overhead due to too much
     messages in btwn
 
-**Election Algorithms**
+
+## Election Algorithms
 
   - Deciding who is going to play the daemon
   - In DS there's a need for a coordinator. Hence, we use election
@@ -209,7 +185,7 @@ a DS
 
 
 
-**Bully Algorithms**
+## Bully Algorithms
 
   - Ds machines all have unique numerical ID, and the processes
     communicates with each other, through a reliable connection.
@@ -271,8 +247,8 @@ a DS
     workstations.
   - Accuracy decreases as we move down through the strata.
 
-**Summary**
 
+## Summary
   - There is **no global agreement on time** in a DS; internal clocks of
     a system’s computers will run at different rates.
   - **UTC** provides an external global standard, to which we can
