--- a/Distributed Systems/_posts/2020-03-01-DS-14.md
+++ b/Distributed Systems/_posts/2020-03-01-DS-14.md
@@ -6,16 +6,14 @@ categories:
 date: 2020-03-01
 ---
 
+- [Dependability – Requirements](#dependability--requirements)
+- [Terminology](#terminology)
+- [Failure models](#failure-models)
+- [Failure Masking by Redundancy](#failure-masking-by-redundancy)
+- [Groups and Failure Masking](#groups-and-failure-masking)
+- [The Byzantine Generals problem](#the-byzantine-generals-problem)
 
 
-
-## **15. Fault Tolerance**
-
-**Goal** – Understand what fault tolerance in distributed system is
-
-A goal in distributed system is to construct a system in a way that it
-can automatically recover from partial failures without seriously
-affecting the overall performance.
 
 **Introduction – Dependability**
 
@@ -33,8 +31,8 @@ affecting the overall performance.
     correctness is key
       - C can be a process, component, channel etc
 
-**Dependability – Requirements**
 
+## Dependability – Requirements
   - In order to put the concept of fault tolerance on DS, we have to
     look at dependability. We need to look at it bc in fault tolerance,
     there's this aspect of dependability, but also correctness.
@@ -116,19 +114,18 @@ affecting the overall performance.
     small, the mean time to repair, then it’s in ur interest coz then ur
     system is up and running quickly\!\!
 
-**Terminology**
+## Terminology
 
   - Do we understand the diff btwn failure, error and fault.
     We may tend to look at the definition and interchange them.
   - ![Screenshot 2020-02-25 at 9 25 14 pm](https://user-images.githubusercontent.com/33334078/75288990-51505c80-5815-11ea-8cdc-a3e27dab6d8e.png)
 
 
-**Failure models**
+## Failure models
 
   - We’d like to look at the type of failure that’s likely to happen in
     DS
   - ![Screenshot 2020-02-25 at 9 26 19 pm](https://user-images.githubusercontent.com/33334078/75289081-780e9300-5815-11ea-9b66-b7083285743c.png)
-
 
 
 
@@ -144,7 +141,7 @@ affecting the overall performance.
       - In DS, context of security, say there was a security breach – is
         it deliberate or unintentional? hard to prove.
 
-**Failure Masking by Redundancy**
+## Failure Masking by Redundancy
 
   - In order to deal with fault tolerance, DS adopts redundancy. By
     redundancy, hopefully you will mask those failures
@@ -164,7 +161,7 @@ affecting the overall performance.
           - To do with software processes or hardware system – you add
             more server and services to prevent from failing
 
-**Process Resilience**
+** Process Resilience**
 
   - In order to support fault tolerance, we replicate processes into
     groups.
@@ -176,7 +173,7 @@ affecting the overall performance.
     ![Screenshot 2020-02-25 at 9 27 19 pm](https://user-images.githubusercontent.com/33334078/75289151-9bd1d900-5815-11ea-9162-bf7855cf03c0.png)
 
 
-  - Flat group
+  - **Flat group**
       - All processes are equal and there is no leader – decisions are
         made collectively
       - Advantage is that it is symmetrical and has no single point of
@@ -185,7 +182,7 @@ affecting the overall performance.
         could introduce delay and overhead
 
 
-  - Hierarchical group
+  - **Hierarchical group**
       - There is a coordinator and all the others are workers. And tasks
         and requests are sent to cordis.
       - If the coordinator fails, it brings the entire group down, but
@@ -194,7 +191,7 @@ affecting the overall performance.
       - If the cordi fails, you needa elect new coordinator, using
         *Leader election algorithm.*
 
-**Groups and Failure Masking**
+## Groups and Failure Masking
 
   - **K-fault tolerant group** – when a group of processors can mask any
     k concurrent member failures.
@@ -351,7 +348,7 @@ affecting the overall performance.
 
 → for 1 fault, you need 3k+1 processes- as you need to go 2 rounds
 
-**The Byzantine Generals problem**
+## The Byzantine Generals problem
 
   - It’s to do with reference to byzantine empire in eastern Europe.
   - The generals need to communicate other by messenger, and after
