--- a/Distributed Systems/_posts/2020-03-05-DS-16.md
+++ b/Distributed Systems/_posts/2020-03-05-DS-16.md
@@ -6,12 +6,20 @@ categories:
 date: 2020-03-05
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [A Layered Cloud Architecture](#a-layered-cloud-architecture)
+  - [Taxonomy of Cloud Models](#taxonomy-of-cloud-models)
+  - [Cloud Architecture](#cloud-architecture)
+  - [Virtual Infrastructure Manager](#virtual-infrastructure-manager)
+  - [Virtual Machines versus Containers](#virtual-machines-versus-containers)
+  - [Cloud service life cycle](#cloud-service-life-cycle)
+  - [Private, public and hybrid clouds](#private-public-and-hybrid-clouds)
+  - [Summary](#summary)
+<!-- TOC END -->
 
-## **17. Cloud Computing II**
 
-**Goal** – Understand concepts of Cloud computing
 
-**A Layered Cloud Architecture**
+## A Layered Cloud Architecture
 
   - ![image](https://user-images.githubusercontent.com/33334078/75290220-d6d50c00-5817-11ea-844a-107d275ec656.png)
   - **Application** - The cloud application running on a cloud –
@@ -36,7 +44,8 @@ date: 2020-03-05
   - Steps of how to deploy an application using an architecture like
     this one
 
-**Taxonomy of Cloud Models**
+
+## Taxonomy of Cloud Models
 
   - Nowadays we look at how services are exposed in the cloud – google,
     IBM, etc- you could distinguish 3 basic models
@@ -60,7 +69,8 @@ date: 2020-03-05
   - \* as service
       - Star could be anything – storage, network, db, hardware, etc
 
-**Cloud Architecture**
+
+## Cloud Architecture
 
 - ![image](https://user-images.githubusercontent.com/33334078/75290412-2adff080-5818-11ea-8dca-5a2e8670cdbd.png)
 
@@ -112,29 +122,6 @@ date: 2020-03-05
     they don’t buy one server at once. They buy a container of racks\!\!
       - Buy the container of racks and scalability is key and is IMP
 
-**User’s view of virtualization**
-
-  - ![Screenshot 2020-02-25 at 9 46 29 pm](https://user-images.githubusercontent.com/33334078/75290464-48ad5580-5818-11ea-856e-3a6732dfbabc.png)
-  - In virtualisation layer, it takes the logical view of the
-    application – you could run gmail, any ERP, any web store etc.
-    then you rely on the physical server\!
-  - Physical view – computation, storage, and interconnectedness
-  - Importance of the network here\!\! V fast and imp
-      - you need to map the application to requirements in terms of
-        physical resources – the way you do this is through a
-        virtualization layer which ensures you have VM
-      - VM interesting is that they can bring their own OS. If you are
-        running a Linux cloud, you can bring windows application. →
-        allows for application portability
-  - The way that you enable virtualisation is the fact that you rely on
-    a hypervisor
-      - VM manager in itself partitions a physical host transparently
-        via emulation so that you have multiple VMs accessing the same
-        hardware → hardware assisted virtualisation
-      - By doing that you provide complete simulated hardware
-        environment
-  - Importance of virtualisation
-
 **Virtual Machine Managers**
   - Which hypervisor do we use to partition the server?
       - VMware
@@ -142,26 +129,8 @@ date: 2020-03-05
       - Xen – amazon has been using it but now they use KVM
   - → they are hypervisors and support virtualisation as you want it
 
-**Sources of Virtual Infrastructure**
 
-  - Physical layer, virtualisation layer and we move onto infrastructure
-    layer
-  - Layered architecture that shows how the physical resources are gonna
-    run multiple VMs thanks to local hypervisor, such as KVM and Zen,
-    and on top of that we have VIM that manages all the VMs that I need.
-  - Virtual Infrastructure Manager –manages all VMS that I need
-  - On top – public interface to the user that accesses services
-  - Interesting is that if I take the Leeds cloud test bed, what happens
-    is you can run my services using local resources but if my VIM is
-    clever enough to provide me an interface to outsource the resources    from somewhere else itd be great. Can use:
-      - Private local physical resource
-      - Public remote physical resources
-      - If I feel like my resource is too small, you can reach out.
-  - Will form private virtual resource pools, and this serves very well
-    bc I use local and if I need more, I can reach out for it. →
-    Scalability comes as free coz if you need more you can ask for it
-
-**Virtual Infrastructure Manager**
+## Virtual Infrastructure Manager
 
   - ![image](https://user-images.githubusercontent.com/33334078/75290482-52cf5400-5818-11ea-8822-0ce9650cf63d.png)
   - VIM – very very imp coz it’s a brain that decides where to
@@ -216,8 +185,7 @@ date: 2020-03-05
     federation cloud of heterogenous public/ private clouds for better
     resource allocation and dispersion of resources
 
-**Virtual Machines versus Container**
-
+## Virtual Machines versus Containers
   - ![Screenshot 2020-02-25 at 9 47 34 pm](https://user-images.githubusercontent.com/33334078/75290528-70042280-5818-11ea-9d9b-dfe41aa05f48.png)
   - He has mentioned VM – there's more than that. If we use a VM, it may
     bring a guest operating system. The host OS can be Linux but you
@@ -245,7 +213,8 @@ date: 2020-03-05
         container is restarted on time
   - Uni makes use of extensive containers and prefers singularity
 
-**Cloud service life cycle**
+
+## Cloud service life cycle
 
   - How we bring the construction of an application from constructing
     it to deploying and to run it.
@@ -254,31 +223,31 @@ date: 2020-03-05
 <!-- end list -->
 1.  Cloud application
 2.  Programming model/service construction
-    1.  **Programming model** – to enable the development of an app.
+    - **Programming model** – to enable the development of an app.
         could be MPI, Hadoop
-    2.  **Application packager -** need to create service manifest.
+    - **Application packager -** need to create service manifest.
         so that you explicitly say that these are the resources that my
         app needs, but if they change, no need to recompile.
-    3.  **VM image constructor** – generates images - can be google or
+    - **VM image constructor** – generates images - can be google or
         domain and is a key characteristic of VM
 3.  Service deployment
-    1.  **Application manager** – to deploy service on a cloud
+    - **Application manager** – to deploy service on a cloud
         infrastructure. Know where it runs
-    2.  **VM Contextualizer** – contextualisation means automatically
+    - **VM Contextualizer** – contextualisation means automatically
         generate dependencies of applications. E.g. libraries need to
         be found on the fly. Dependencies need to be embedded on the VM
         image
-    3.  **Application monitor** – to monitor the service at operation
+    - **Application monitor** – to monitor the service at operation
         time
 4.  Service operation
-    1.  **VM manager** - Need to manage and allocate VMs to physical
+    - **VM manager** - Need to manage and allocate VMs to physical
         nodes
-    2.  **VM infrastructure manager** to manage VM – open nebula and
+    - **VM infrastructure manager** to manage VM – open nebula and
         openstack
 
-    3.  **Infrastructure monitor** – to monitor resources
+    - **Infrastructure monitor** – to monitor resources
 
-**Private, public and hybrid clouds**
+## Private, public and hybrid clouds
 
   - Public cloud – the cloud provider. E.g. MS azure, aws, etc. you can
     just go and use the resources you need
@@ -294,7 +263,6 @@ date: 2020-03-05
     More private and secure
 
 **Use Cases**
-
   - ![image](https://user-images.githubusercontent.com/33334078/75290554-7d211180-5818-11ea-945d-ce24b0747466.png)
   - End user to Cloud
       - Applications running on the cloud and accessed by end users
@@ -311,8 +279,7 @@ date: 2020-03-05
       - E.g. a supply chain
       - → look image.
 
-**Conclusion**
-
+## Summary
   - Several Computing Platforms/Paradigms are promising to deliver
     “Computing Utilities” vision
       - Cloud Computing is promising to turn vision into reality
