--- a/Distributed Systems/_posts/2020-03-07-DS-17.md
+++ b/Distributed Systems/_posts/2020-03-07-DS-17.md
@@ -6,15 +6,16 @@ categories:
 date: 2020-03-07
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Big Data](#big-data)
+  - [What is MapReduce?](#what-is-mapreduce)
+  - [MapReduce](#mapreduce)
+  - [Distributed file system](#distributed-file-system)
+  - [Summary](#summary)
+<!-- TOC END -->
 
-## **18. Big Data, MapReduce and Hadoop**
 
-**Goal** – Understand concepts of MapReduce/Hadoop
-  - And why data has become so important
-  - Dealing with large data
-  - Parallel data processing
-
-**Big Data Everywhere**
+## Big Data
   - Not a single data where data is not collected and stored in a
     warehouse
       - a lot of them is ecommerce, web data
@@ -26,155 +27,6 @@ date: 2020-03-07
     manner</span> and scalability is key, you expect to deal with these
     data in massive scale
 
-**How much data? – daily generation**
-  - from different commerce and website.
-      - Google – how much it processes everyday – 100PBs. And 15
-        Exabytes
-      - Facebook – 300PB and 600TB a day
-      - CERN – European nuclear center – 40PBs year – where they
-        experiment with ‘large hadron collider’
-          - Bc the data needs to be generated, stored and analysed
-
-**Types of data**
-
-  - What type of data would you be dealing with on a daily basis?
-  - Relational data - Tables, transaction, legacy
-  - Text data - Web text
-  - Semi-Structured data – XML, JSON
-  - Graph data – social network from the semantic web.
-  - Streaming data – video stream and you analyse when its coming
-      - V imp for computer vision for surveillance and security
-
-**What to do with these data?**
-
-  - Is used for searching and querying algorithm
-      - Keyword based search
-      - Pattern matching – you try to find similar pattern in other
-        data.
-          - E.g. aircraft engine – pattern matching is imp coz its imp
-            to understand for maintenance and detecting faults in the
-            engine
-  - Knowledge discovery
-      - Data mining
-      - Statistical modelling
-  - Statistics and aggregation
-      - Data is stored in a warehouse
-
-**What is MapReduce?**
-
-  - Data comes in a large scale and MapReduce is a programming model to
-    express distributed computations at a massive scale. you want to
-    process it parallelly hence you need this programming model.
-  - Not only it does the processing, but it will organize and preform
-    search computations so that the process takes minimum time.
-  - Been introduced with google in 2003, and there's open source
-    implementation called Hadoop
-
-**Is it important?**
-
-  - Process lots of data in parallel
-  - Large ready-made data problem
-      - Data whether it is user generated, cloud provider, we want to do
-        sth with that data to make sense of it
-  - We can see the appetite of providing <span class="underline">utility
-    computing</span>
-      - Taking this idea of large data processing and making it
-        available as a service as utility computing → provision of
-        parallel data processing clusters
-      - If you give me data, I can provide you this utility computing
-        service and can help you make sense of the data
-
-**How do we scale up? Divide and Conquer**
-
-  - It comes from battlefield\! And politicians
-  - The way we scale is we have work to do and we partition with small
-    chunks, and we assign partitions to workers and they work, and we
-    get intermediate result r1 r2 r3 and combine it to get the final
-    result
-  - If we can apply this idea for large parallel processing →
-    MapReduce is about\!
-
-**Parallelization challenges**
-
-  - Few questions arise to make this happen.
-  - How do we assign work units to workers?
-  - What if we have more work than workers?
-  - What if workers need to share partial results? → May need to
-    synchronize
-  - How do we aggregate partial results?
-  - How do we know if they’ve finished? → some form of synchronization
-  - What if workers die?
-      - Fault tolerance, need to detect AND need a mechanism to get the
-        work restarted
-  - MapReduce has to deal with these problems
-
-**Common theme?**
-
-  - you have number of problems that arise bc they need to communicate
-    with each other and share resource → therefore you need
-    synchronization mechanism\!\!
-
-**Managing multiple workers**
-
-  - Difficult coz we don’t know
-      - The order in which workers run
-      - When the workers interrupt each other
-      - And the order in which workers access shared data
-  - Thus we need → OS\!\!
-      - Semaphores – lock and unlock (deadlock)
-      - Conditional variables (wait, notify, broadcast)
-      - Barriers
-  - Still have problems
-      - Deadlocks, race conditions for memory and CPU
-      - Dining philosophers – 5 philosophers sit around the table and
-        they eat and think
-          - Resource sharing problems
-
-**Current tools**
-
-- In the world of parallel processing you have two models:
-    1.  Shared memory - have 5 processes and they access same memory and the access needs to be controlled
-
-    2.  MPI - every process has its own private memory and they do
-        communication via message passing
-
-- Design patterns
-
-  1.  Master slaves – imp for MapReduce
-
-  2.  Producer-consumer flaws – in OS, they have processors and do work, and put it in the queue/ buffer, and consumers will go to buffers and take what they produced
-      - Producers cannot produce if buffer is full and consumers cannot access if the buffer is empty
-  3.  Work queue – ActiveMQ, and modern systems use this, where processors
-      this one is synchronised with what's in the queue – lecture on
-      communication
-
-
-**Challenges**
-
-  - Concurrency is difficult to reason bc
-      - Coz the scale of data center, and across the world – you need to
-        deal with failures and you have thousands of services and users
-        up and running. → problem on a large scale
-  - Reality
-      - One off solution – can write own code
-      - Can run dedicated library
-      - Burden is that you have to manage everything – design,
-        implementation, concurrency
-
-**Big ideas**
-
-  - I'm gonna hide system level detail
-      - Deadlock is gone, no race condition.
-  - Separate what from how
-  - As a developer you specify the computation (what) and MapReduce will
-    handle the actual execution
-  - Keep in mind to move the processing to data\!\!\!
-      - We have massive data and some form of cluster, and if we move
-        data to processing, we have to deal with bandwidth and latency
-        issue. So instead we move the processing
-  - Processing the data sequentially, and can deal with how often you
-    access the disk bc the seeks are expensive yet disk throughput is
-    quite reasonable
 
 **Typical large-data problem**
 
@@ -188,7 +40,30 @@ date: 2020-03-07
   - Provide a functional abstraction for these two operations
 
 
-**MapReduce**
+## What is MapReduce?
+  - Data comes in a large scale and MapReduce is a programming model to
+    express distributed computations at a massive scale. you want to
+    process it parallelly hence you need this programming model.
+  - Not only it does the processing, but it will organize and preform
+    search computations so that the process takes minimum time.
+  - Been introduced with google in 2003, and there's open source
+    implementation called Hadoop
+
+
+**Parallelization challenges**
+  - How do we assign work units to workers?
+  - What if we have more work than workers?
+  - What if workers need to share partial results? → May need to
+    synchronize
+  - How do we aggregate partial results?
+  - How do we know if they’ve finished? → some form of synchronization
+  - What if workers die?
+      - Fault tolerance, need to detect AND need a mechanism to get the
+        work restarted
+  - MapReduce has to deal with these problems
+
+
+## MapReduce
 ![image](https://user-images.githubusercontent.com/33334078/75290761-de48e500-5818-11ea-8030-23de41dc19ea.png)
 
   - My code needs exclusively 2 functions in the code - Map and Reduce
@@ -211,8 +86,7 @@ date: 2020-03-07
   - Handle errors and faults – detects failure and restart if needed
 
 **MapReduce**
-
-  - Can add.2 more functions - Partition and Combine
+  - Can add.2 more functions - **Partition and Combine**
   - If you know the data you are dealing with, you can look at number of
     partitions as an important parameter in ur code. you can then then
     can divide up the key space for parallel reduce operation, as you
@@ -225,8 +99,8 @@ date: 2020-03-07
         intermediate result
   - → 2 extra thing if you know the data
 
-**Logical data flow in 5 processing steps in MapReduce**
 
+**Logical data flow in 5 processing steps in MapReduce**
   - Input data has a Key and the value as a pair.
   - Map function generates these pairs. And I'm gonna sort out key value
     pairs, sort by key. Then you group them so key 1 has n values and
@@ -235,7 +109,6 @@ date: 2020-03-07
   - → Sort and group
 
 **A world counting example on \<Key, Count\> distribution**
-
   - ![Screenshot 2020-02-25 at 9 51 31 pm](https://user-images.githubusercontent.com/33334078/75290828-fcaee080-5818-11ea-9d67-ecac60c22771.png)
   - Use MapReduce to count the number of words in a book
   - As an input, you have ‘most ppl ignore most poetry’ and ‘most
@@ -260,8 +133,8 @@ date: 2020-03-07
       - If you use GPU as accelerators, you can add custom
         implementation of Hadoop itself
 
-**Distributed file system**
 
+## Distributed file system
   - MapReduce will work, but the underlying system, you need distributed
     file system – you need to arrange data so that Hadoop can access and
     work with it and make that data available to the framework
@@ -281,32 +154,9 @@ date: 2020-03-07
       - HDFS (Hadoop Distributed File System) – to prepare data for
         parallel processing
 
-**Case study – GFS**
 
-  - Would rely on data being available on clusters, and these clusters
-    will have racks and each rack has number of servers
-  - Clusters need to communicate with each other through switches
-  - Number of datacentres all over the world connected through network
-
-
-
-**Data center networks**
-
-  - ![image](https://user-images.githubusercontent.com/33334078/75290848-07697580-5819-11ea-8708-5a2d9d1d1ae1.png)
-  - Where you do a quick search and it goes down to border router → load
-    balancer → get to certain rack through switches
-  - Load balancer receives request and directs workload within data
-    center and returns result to client
-  - TOR – top of the rack 보드 to do with the way the networking is set up
-    and you have very hierarchical view of switches
-      - Communication has to be extremely fast – theoretically 5
-        microseconds
-  - When you are processing the data, some rack could talk to the one
-    next, and to ask for more computation and synchronize and work
-    together for my request
 
 **GFS**
-
   - Assumptions
       - Google always relied on commodity hardware
       - Expected failure to be common.
@@ -331,7 +181,7 @@ date: 2020-03-07
         has failed, and they have a system that you really quickly
         assign a new master
 
-**Summary**
+## Summary
 
   - Cloud computing and large data
   - General idea of MapReduce and about large data processing
