--- a/Distributed Systems/_posts/2020-02-25-DS-11.md
+++ b/Distributed Systems/_posts/2020-02-25-DS-11.md
@@ -6,12 +6,18 @@ categories:
 date: 2020-02-25
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Namespaces](#namespaces)
+  - [Name Resolution](#name-resolution)
+  - [Mounting](#mounting)
+  - [Namespace implementation](#namespace-implementation)
+  - [Name resolution (navigation) methods](#name-resolution-navigation-methods)
+    - [Iterative resolution](#iterative-resolution)
+    - [Recursive resolution](#recursive-resolution)
+<!-- TOC END -->
 
 
 
-## **12. Naming II – Structured naming**
-
-**Goal** – understand principles behind a naming in a distributed system
 
 **Flat vs Structured Naming**
   - Flat names: not very convenient for humans to use, but good for
@@ -24,26 +30,26 @@ date: 2020-02-25
   - Next – explore how this structured name are handled and how to
     resolve them to addresses
 
-**Namespaces**
 
-  - Namespace is a collection of all valid names – anything you access
+## Namespaces
+  - **Namespace** is a collection of all valid names – anything you access
     are resources, and it should stick to a
   - When we handle a name service, the server will require you to use a
     namespace.
   - Namespace for structured names can be represented as directed graphs
     with two nodes
-      - leaf nodes w no outgoing edges that represents a named identity
+      - **leaf nodes** w no outgoing edges that represents a named identity
           - leaf nodes store entity attributes (like address) or state
             of entity itself
-      - directory nodes which are labelled outgoing edges.
+      - **directory nodes** which are labelled outgoing edges.
           - Each node in the graph is yet another entity.
           - Directory nodes store a directory table of outgoing edges to
             help you locate (node identifier, edge label) pair
   - Each path in naming graph can be identified by sequence of labels
     which are associated with edges in the path – N : {L1,L2,..Ln}
 
-**Example: A File System**
 
+**Example: A File System**
   - ![image](https://user-images.githubusercontent.com/33334078/75287743-d6864200-5812-11ea-99ad-6823385a0a50.png)
   - Red – directory node, Green – leaf node → difference is whether it
     has an outgoing edge
@@ -58,8 +64,8 @@ date: 2020-02-25
   - End of the day directory node will contain (node identifier, edge
     label) pair
 
-**Naming Graph with a single root node**
 
+**Naming Graph with a single root node**
   - ![Screenshot 2020-02-25 at 9 07 56 pm](https://user-images.githubusercontent.com/33334078/75287763-e56cf480-5812-11ea-878b-c5e1862f2d8f.png)
   - Has root node, n0, which has only outgoing and no incoming edges
   - Points to directory node n1 stores extra data as it has 2 leaf nodes
@@ -82,18 +88,16 @@ date: 2020-02-25
   - Q: what's Unix command to create a symbolic link?
       - A: ln – creates symbolic link
 
-**Name Resolution**
 
+## Name Resolution
   - Name resolution- the process of looking up a name.
   - Problem- to resolve a name we need a directory node. So how do you
     find the initial node?
       - Closure mechanism – in practice, we have to find a mechanism to
         select an implicit context –aka a start point. Maybe start with
         a pointer to a node– and name resolution will help you carry on
-        w ur task.
-
+        with your task.
   - E.g.
-
       - To access [www.distirbuted.net](http://www.distirbuted.net) - Ur
         computer talks to DNS server and pass the URL, DNS server gives
         the IP address of that server and that address.- this is our
@@ -106,8 +110,8 @@ date: 2020-02-25
         rest
   - → the need for a closure mechanism\!\!- mechanism where to start
 
-**Closure mechanism**
 
+**Closure mechanism**
   - Close mechanism - name resolution is possible only if we know how
     and where to start – deals with selecting an initial node.
   - In UNIX, to find a file in a disk
@@ -127,8 +131,8 @@ date: 2020-02-25
     an index node that will tell us the relative address
   - → Always think about sth that is absolute and then relative address
 
-**Linking**
 
+**Linking**
   - We can create aliases 별명 for a named entity, corresponding to links
     in the naming graph
   - We can create aliases for a named entity, corresponding to links in
@@ -141,20 +145,20 @@ date: 2020-02-25
         aliased entity → symbolic link
   - Q: How do we resolve in a case it has diff namespace?
 
-**Mounting**
 
-  - To merge different namespaces in a transparent way through mounting.
+## Mounting
+  - To merge **different namespaces** in a transparent way through mounting.
   - You will need the concept of mounting – you mount the namespace – you
     have the first namespace and you have a diff one on LHS and you
     wanna combine, so that from the first namespace you can access the
     second namespace, but <span class="underline">transparently</span>.
   - Terminology
-      - Foreign namespace – namespace that needs to be accessed – so RHS
+      - **Foreign namespace** – namespace that needs to be accessed – so RHS
         in the diagram
-      - Mount point – node in the current namespace that contains the
+      - **Mount point** – node in the current namespace that contains the
         node identifier of the foreign namespace
-          - That’s the one ur gonna use to refer to the foreign
-      - Mounting point – the node in the foreign namespace where to
+          - That’s the one you are gonna use to refer to the foreign
+      - **Mounting point** – the node in the foreign namespace where to
         continue name resolution
   - Mounting across a network requires:
       - The name of an access protocol - NFS
@@ -164,38 +168,17 @@ date: 2020-02-25
 
 
   - If you are able to do this in a file system, then you need a
-    protocol to allow ur mount point to access the mounting point to
+    protocol to allow yourmount point to access the mounting point to
     bring the 2 namespaces together.
       - ![Screenshot 2020-02-25 at 9 09 48 pm](https://user-images.githubusercontent.com/33334078/75287907-282ecc80-5813-11ea-89cb-9e8ba2a4497f.png)
       - So you start resolving in the first machine, and once you can't
         resolve further you mount to the foreign namespace and start
         resolving. Once its resolved it goes back to the original
-      - **Need a protocol that allow the mount point to be able to access
-        the mounting point of the foreign name space to bring it
-        together.**
-      - Resolving /remote/vu/mbox
-          - Start by resolving the root directory on the client machine
-            and continues until /remote/vu is reached
-          - Process continues by returning the URL
-            nfs://flits.cs.vu.nl/home/steen – but /home/steen is not
-            available in current namespace
-          - Therefore, we mount - contact the
-            <span class="underline">file server</span> /flits.cs.vu/nl
-            by means of <span class="underline">NFL</span>
-            <span class="underline">protocol</span>→ mount to machine b
-            and continue the lookup
-          - There's a node in a current namespace that connects to a
-            node identifier of the foreign namespace
-              - Mount point (usually directory node) - vu
-              - Mounting point (directory node in foreign name space)–
-                steen
-          - And continue access /home/steen on the remote machine THEN
-            read mbox, then come back and the process is over
+      - **Need a protocol that allow the mount point to be able to access the mounting point of the foreign name space to bring it together.**
       - → Resolve name on current namespace then the foreign namespace
       - Think about the protocol that will bring the 2 together
 
-**Namespace implementation**
-
+## Namespace implementation
   - It is necessary to distribute the implementation of a namespace over
     multiple nameservers
       - Distribute name resolution process as well as name space
@@ -207,21 +190,20 @@ date: 2020-02-25
     system.
   - DNS – How we structure the directory node in the tree
   - ![Screenshot 2020-02-25 at 9 10 47 pm](https://user-images.githubusercontent.com/33334078/75287980-4bf21280-5813-11ea-9200-fc4c95a6f53a.png)
-      - Global level– there are a few of them and are managed by diff
+      - **Global level** – there are a few of them and are managed by diff
         organisations and number is quite limited. – nl, uk, org, com,
         etc
-      - Administrational level – mid level directory, and they are
+      - **Administrational level** – mid level directory, and they are
         grouped in such a way where each group can be assigned to a
         separate administration.
           - Vu university – cs department is part of admin layer and is
             managed by the group of people.
-      - Managerial level– a lot of thing happens. It not only consists
+      - **Managerial level**– a lot of thing happens. It not only consists
         of low-level directory node, but is managed by its own
         administration. Main issue is effectively mapping directory
         nodes to local name server, starting from global to managerial.
-  - Think about how to access file in managerial layer from global layer
-    → first have to realize its in nl- vu-cs-ftp-pub-globule-index.htm.
-    look at the path.
+
+
 
 **Namespace implementation**
 
@@ -237,29 +219,26 @@ date: 2020-02-25
   - Replicas – replicas should be close to people who want to do a DNS
     lookup. You’d hope there's a DNS server near the uk.
 
-**Name resolution (navigation) methods**
 
-  - Name resolution works through diff algorithms
-  - Iterative resolution
-      - Root server will resolve the path name as far as it can, and
-        return the result to the client
-      - And client passes the reaming pathname to the next name server
-      - ![Screenshot 2020-02-25 at 9 11 32 pm](https://user-images.githubusercontent.com/33334078/75288036-66c48700-5813-11ea-8a33-b77084f469ec.png)
-    <!-- end list -->
-    1.  My client take the name and contact root remote server and it
-        passes the entire name – root server returns the \<nl\> server.
-        But not the \<vu,cs,ftp\>
-    2.  Contact \<nl\> and pass the remaining name \<vu,cs,ftp\> to the
-        \<nl\>, and it resolves \<vu\> but returns \<cs,ftp\>
-    3.  Contact \<vu\> and pass \<cs,ftp\>. \<vu\> knows and resolves
-        \<cs\>, but not \<ftp\>. So the address of ftp is sent back to
-        the client
-    4.  Contact \<cs\> and it resolves \<ftp\>\!\!
-
-      - → Very iterative
+## Name resolution (navigation) methods
+### Iterative resolution
+  - Root server will resolve the path name as far as it can, and
+    return the result to the client
+  - And client passes the reaming pathname to the next name server
+  - ![Screenshot 2020-02-25 at 9 11 32 pm](https://user-images.githubusercontent.com/33334078/75288036-66c48700-5813-11ea-8a33-b77084f469ec.png)
+<!-- end list -->
+1.  My client take the name and contact root remote server and it
+    passes the entire name – root server returns the \<nl\> server.
+    But not the \<vu,cs,ftp\>
+2.  Contact \<nl\> and pass the remaining name \<vu,cs,ftp\> to the
+    \<nl\>, and it resolves \<vu\> but returns \<cs,ftp\>
+3.  Contact \<vu\> and pass \<cs,ftp\>. \<vu\> knows and resolves
+    \<cs\>, but not \<ftp\>. So the address of ftp is sent back to
+    the client
+4.  Contact \<cs\> and it resolves \<ftp\>\!\!
 
 
-  - Recursive resolution
+### Recursive resolution
   - ![Screenshot 2020-02-25 at 9 12 18 pm](https://user-images.githubusercontent.com/33334078/75288096-82c82880-5813-11ea-96e8-5515e4ffc41b.png)
     1.  Step 1. Root name passes the entire name \<nl,vu,cs,ftp\>
     2.  Root contacts \<nl\> and asks \<vu,cs,ftp\>
@@ -268,6 +247,7 @@ date: 2020-02-25
         to resolve \<ftp\>
     5.  Bc its recursive, it goes back upup and the root name server
         pass the entire result to the client
+
 
 **Which is better?**
   - **Recursive** - there are great demands on each server in the path
