--- a/Distributed Systems/_posts/2020-03-09-DS-18.md
+++ b/Distributed Systems/_posts/2020-03-09-DS-18.md
@@ -6,15 +6,16 @@ categories:
 date: 2020-03-09
 ---
 
+t<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Architecture of the internet of things](#architecture-of-the-internet-of-things)
+  - [Fog / edge computing](#fog--edge-computing)
+  - [Summary](#summary)
+<!-- TOC END -->
 
-## **19. Trends**
 
-**Goals** – Understand concepts surrounding ubiquitous clouds
+
 
 **Clouds for the future internet and social networking**
-
-  - 50 years ago, the internet was invented and 30 years – www, and the
-    cluster, grid and cloud computing.
   - Cloud comp is seen as the base for anything you like to develop in
     the future
   - Internet of Things (IoT) - In addition to traditional access to
@@ -29,7 +30,6 @@ date: 2020-03-09
   - Cloud and IOT will reshape human factors and the way we live
 
 **What IoT actually means**
-
   - Kevin Ashton said that the internet was created to connect
     computers, but we can connect more than that. We connect physical
     world so we have some form of ubiquitous computing and they’ll
@@ -38,43 +38,8 @@ date: 2020-03-09
       - Looks like IOT installed base will grow to 40 billion units
       - Amt of data it is gonna generate – 80—zettabytes
 
-**IoT telemedicine applications**
 
-  - Older person living own, and the person need constant monitoring on
-    blood pressure, and a number of body sensors attached to herself and
-    all these sensors generate data and sent to mobile phone to
-    computing facility, and can use zigbee or wifi. Once it reaches, it
-    will be stored and it can be analysed.
-  - If comp facility is where the doctor is, the doctor can be notified
-    when sth weird happens with the data that’s been analysed
-  - Devices, sensors, data, wireless internet to support system
-
-**How to integrate a fridge into IoT**
-
-  - You could install sensors inside the fridge – it detects sth and tells
-    you water filter needs replacing, etc
-  - In order to implement this algo, you sense sth in the case of door
-    being open, timer, etc and alarm goes off and person can go do sth
-    about it
-  - you can use barcode RFID and add more sensors into this fridge to
-    detect sth else
-      - Can have camera in the butter tray and test the weight of the
-        butter and warn them if low
-      - If you have set of recipes programmed, it can tell you what to
-        make with the food it has
-  - Some form of computational intelligence
-  - More than that\!\! Computational intelligence + network connectivity
-      - you can write code where a fridge can talk to you
-      - And make the fridge order food– it needs list of things that its
-        running low, and in order to do that it can look at a web
-        service and they can order\! Ofc when you have registered credit
-        card lmao
-  - It requires
-      - Local sensing
-      - Local processing
-      - Computational intelligence
-
-**Architecture of the internet of things**
+## Architecture of the internet of things
 
   - ![image](https://user-images.githubusercontent.com/33334078/75291173-9ffff580-5819-11ea-857b-eaf2a9ef2760.png)
   - In order for IoT to work, we use bottom up approach
@@ -89,8 +54,8 @@ date: 2020-03-09
   - A layered architecture where application relies on a network and
     sensing data
 
-**IOT: Smart everything**
 
+**IOT: Smart everything**
   - Take data, cloud and application approach and do sth with it
       - Spain – a lot of IoT based application on ‘smart agriculture’
         to prevent for planned diseases
@@ -105,8 +70,8 @@ date: 2020-03-09
       - Monitor water quality – same as smart agriculture
   - Looots of data to process and cloud is there as a support foundation
 
-**Disruptive applications: New requirements**
 
+**Disruptive applications: New requirements**
   - These applications are know as disruptive. They are disruptive bc
     the underlying comp structure isn't designed to fulfil requirements
     of these applications
@@ -122,8 +87,8 @@ date: 2020-03-09
   - Data analytics to have in place – will help you get new business
     model in order to make sense of the data
 
-**Example: Driverless cars**
 
+**Example: Driverless cars**
   - Number of sensors all around the car
   - Combination of enormous amount of sensor data and critical local
     processing power
@@ -139,8 +104,7 @@ date: 2020-03-09
     heavily on cloud processing. Only problem with cloud is it could be
     late when receiving data from the cloud
 
-**Fog / edge computing**
-
+## Fog / edge computing
   - Data is processed in the closest computational resource, so the
     latency is low
   - Could have edge devices here and cloud data centres and in the
@@ -169,8 +133,7 @@ date: 2020-03-09
       - Edge is close to the car so low latency and high bandwidth but
         cloud with higher latency
 
-**Conclusion**
-
+## Summary
   - Computing clouds and IoT affect the entire service industry and thus
     the future internet evolution
   - The cloud ecosystems demand ubiquity, efficiency and security
